flex about me photo

--- a/portfolio.html
+++ b/portfolio.html
@@ -95,8 +95,8 @@
 
 
         <div class="row">
-        <div class="col-md-4">
-            <!-- <div class="card" style="width: 18rem;">
+            <div class="col-md-4">
+                <!-- <div class="card" style="width: 18rem;">
                     <img src="http://placehold.it/200x200" alt="Placeholder" id="project-five-live">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -105,18 +105,18 @@
                             <button id="project-five-repo">Repository <i class="fab fa-github"></i></button> -->
 
 
-            <!-- </div> -->
-            <!-- </div> -->
-        </div>
-        <div class="col-md-4">
-       
-            <div class="card" style="width: 18rem;">
-                <img src="Images/gallery/project-four.png" alt="project one screenshot" class="gallery"
-                    id="project-four-live">
-                <div class="card-body">
+                <!-- </div> -->
+                <!-- </div> -->
+            </div>
+            <div class="col-md-4">
+
+                <div class="card" style="width: 18rem;">
+                    <img src="Images/gallery/project-four.png" alt="project one screenshot" class="gallery"
+                        id="project-four-live">
                     <div class="card-body">
                         <h5 class="card-title"><u>Project Two:</br>Park Pack</u></h5>
-                        <p class="card-text" id = "project-four-p">Created by myself and four others, this app allows users to create a user
+                        <p class="card-text" id="project-four-p">Created by myself and four others, this app allows
+                            users to create a user
                             and dog profile, upload a picture, and view other users to create friendships. There is also
                             a built-in chat feature.
 
@@ -126,10 +126,10 @@
 
                     </div>
                 </div>
-        </div>
+            </div>
 
-        <div class="col-md-4">
-            <!-- <div class="card" style="width: 18rem;">
+            <div class="col-md-4">
+                <!-- <div class="card" style="width: 18rem;">
                     <img src="http://placehold.it/200x200" alt="Placeholder" id="project-six-live">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -138,9 +138,9 @@
                             <button id="project-six-repo">Repository <i class="fab fa-github"></i></button> -->
 
 
-            <!-- </div>
+                <!-- </div>
                 </div> -->
-        </div>
+            </div>
         </div>
 
 
